refactor: refactor error handling and error throwing
